# tabulon

./: .envrc  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  flake.nix
.serena/: project.yml
benches/: eval-bench.rs
src/: analysis.rs  ast.rs  codegen.rs  collect.rs  engine.rs  error.rs  lexer.rs  lib.rs  macros.rs  optimizer.rs  parser.rs  prepared.rs  registry.rs  resolver.rs  rt_types.rs  trait_resolver.rs
tabulon_macros/: Cargo.toml  README.md
tabulon_macros/src/: lib.rs
tests/: abi_direct_call_tests.rs  analysis_carry_tests.rs  and_or_carry_tests.rs  compile_direct_tests.rs  context_fn_borrowed_ctx_tests.rs  context_fn_macro_tests.rs  context_fn_tests.rs  custom_fn_tests.rs  error_tests.rs  eval_ptrs_ctx_tests.rs  eval_ptrs_practical_example.rs  expr_tests.rs  fasteval_compat_tests.rs  general_use_tests.rs  generic_vars_tests.rs  if_carry_tests.rs  jump_block_test.rs  multithread_tests.rs  not_tests.rs  number_parsing_tests.rs  pow_tests.rs  precedence_tests.rs  prepared_pipeline.rs  register_functions_typed_tests.rs  reload_tests.rs  resolver_macro_tests.rs  resolver_ref_mode_tests.rs  resolver_tests.rs  resolver_with_ctx_funcs.rs  trait_resolver_tests.rs  typed_registration_tests.rs  unified_ctx_tests.rs
