[package]
name = "tabulon"
version = "0.1.0"
edition = "2024"
authors = ["kihongpark <dev.gihong2012@gmail.com>"]
description = "A high-performance, JIT-compiled expression evaluation engine using Cranelift"
license = "MIT"
repository = "https://github.com/tabulon-rs/tabulon"
keywords = ["jit", "expression", "eval", "cranelift", "math"]
categories = ["compilers", "parser-implementations"]
readme = "README.md"

[[bench]]
name = "eval-bench"
harness = false

[lib]
proc-macro = true

[dependencies]
cranelift = "0.124.1"
cranelift-jit = "0.124.1"
cranelift-module = "0.124.1"
cranelift-native = "0.124.1"
thiserror = "2.0.17"
inventory = "0.3"
uuid = { version = "1.18.1", features = ["v4"] }
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
fasteval = "0.2.4"
criterion = "0.7.0"
rand = "0.8"
foldhash = "0.2.0"

[features]
default = ["optimize"]
optimize = []