[package]
name = "tabulon"
version = "0.1.10"
edition = "2024"
authors = ["kihongpark <dev.gihong2012@gmail.com>"]
description = "A high-performance, JIT-compiled expression evaluation engine using Cranelift"
license = "MIT"
repository = "https://github.com/tabulon-rs/tabulon"
keywords = ["jit", "expression", "eval", "cranelift", "math"]
categories = ["compilers", "parser-implementations"]
readme = "README.md"

[workspace]
members = ["tabulon_macros"]

[[bench]]
name = "eval-bench"
harness = false

[dependencies]
thiserror = "2.0.17"
inventory = "0.3"
uuid = { version = "1.18.1", features = ["v4"] }
tabulon_macros = { path = "tabulon_macros", version = "0.1.2" }
log = "0.4.28"
cranelift = { version = "0.125.3", features = [
  "jit",
  "module",
  "native",
] }

[dev-dependencies]
fasteval = "0.2.4"
criterion = "0.7.0"
rand = "0.9.2"
foldhash = "0.2.0"
shipyard = "0.9.3"

[features]
default = ["optimize"]
optimize = []
