[package]
name = "tabulon_macros"
version = "0.1.0"
edition = "2024"
authors = ["kihongpark <dev.giong2012@gmail.com>"]
description = "Internal procedural macros for the tabulon expression engine."
license = "MIT"
repository = "https://github.com/kihongpark/liftup"
keywords = ["jit", "expression", "macro"]
categories = ["compilers", "parser-implementations"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }